...
                    unawaited(
                      SystemChannels.textInput.invokeMethod('TextInput.show'),
                    );
                  }
                },
                child: TextFieldAutotrim(
                  key: const Key('chat-input'),
                  controller: _controller.inputController,
                  focusNode: _controller.focusNode,
                  autoTrim: false,
                  decoration: InputDecoration(
                    hintText: t.chat.chatView.typeMessageHint,
                    border: InputBorder.none,
...
                              ),
                          ],
                        );
                      },
                    ),
                    suffixIcon: IconButton(
                      key: const Key('chat-send'),
                      icon: _controller.isGenerating
                          ? const Icon(Icons.stop)
                          : const Icon(Icons.send),
                      onPressed: _handleSend,
                    ),
                  ),
...
