...
        return AppBar(
          toolbarHeight: kToolbarHeight,
          titleSpacing: 20,
          automaticallyImplyLeading: false,
          title: isWideScreen
              ? FilledButton.icon(
                  key: const Key('group-new-button'),
                  onPressed: onCreateGroup,
                  icon: const Icon(Icons.add),
                  label: const Text('New group'),
                )
              : charactersButton,
          actions: [
...
