{
  "panelLabels": {
    "basic": "Basic",
    "greetings": "Greetings",
    "prompts": "Prompts",
    "lorebook": "Lorebook",
    "group": "Group",
    "creator": "Creator",
    "appData": "App Data"
  },
  "appBarEditor": {},
  "findReplaceDialog": {
...
    "removeTooltip": "Remove"
  },
  "editorGroupGreetings": {
    "greetingLabel": "Greeting $index"
  },
  "editorLorebook": {
    "newEntryDefaultComment": "New Entry",
    "deleteEntryTitle": "Delete Entry",
    "deleteEntryMessage": "Are you sure you want to delete this entry?",
    "addNewEntryButton": "Add New Entry",
    "noEntriesFound": "No lorebook entries found."
  },
  "lorebookEntryListTile": {
...
